--- a/src/pages/services/security/ess.mdx
+++ b/src/pages/services/security/ess.mdx
@@ -5,7 +5,7 @@ layout: 'src/layouts/MarkdownLayout.astro'
 
 ---
 
-import EHero from '~/components/web/ess.tsx';
+import { Image } from 'astro:assets';
 
 
 
@@ -32,16 +32,22 @@ height={250}/>
 
 
 
- 
-
-
 **Design, Development, Installation and operation management of latest electronic security solutions across your assets**
 
 We will work with you to identify the right mix of Static Guarding along with Electronic Surveillance to ensure optimum service delivery at economical cost
 
 ## Service Offerings
 <br></br>
-<EHero/>
+
+- [Video Analytics](/services/security/ess/video_analytics)
+- [CCTV Access and Intruder Alarm System](/services/security/ess/cctv)
+- [Digitization of Security Records](/services/security/ess/digitize)
+- [Central / Remote Video Monitoring](/services/security/ess/remote)
+- [Motion Sensors](/services/security/ess/sensors)
+
+      
+
+
 
 
 
