--- a/src/pages/services/security/ess/cctv.mdx
+++ b/src/pages/services/security/ess/cctv.mdx
@@ -1,11 +1,11 @@
 ---
 title: CCTV Access and Intruder Alarm System 
 description: Our Smart Electronic Security Solutions for Organisations to ensure complete security 24X7
+layout: 'src/layouts/MarkdownLayout.astro'
 
 ---
 
 
-# CCTV Access and Intruder Alarm System 
 
 **Is your property equipped to deter burglars? Installing a well-maintained intruder alarm and CCTV system sends a strong signal to potential thieves that they should not target your business.**
 
