--- a/src/pages/services/security/ess/digitize.mdx
+++ b/src/pages/services/security/ess/digitize.mdx
@@ -1,11 +1,11 @@
 ---
 title:  Digitization of Security Records 
 description: Why digitize your security records and how does Knighthood do it
+layout: 'src/layouts/MarkdownLayout.astro'
 
 ---
 
 
-# Securely Digitizing your Records
 
 Conventional wisdom used to say that the only safe way to store sensitive information was with physical documents that were securely locked away. However, as digital security technology has become more reliable and user-friendly, more and more people have opted to store data digitally. Digital files can be backed up in multiple locations, are not as vulnerable to fires or disasters, and can't be physically stolen. 
 <br/>
