--- a/src/pages/services/security/ess/remote.mdx
+++ b/src/pages/services/security/ess/remote.mdx
@@ -1,10 +1,10 @@
 ---
 title: Remote Monitoring
 description: Our remote monitoring Solutions for Organisations to ensure complete security 24X7
+layout: 'src/layouts/MarkdownLayout.astro'
 
 ---
 
-# Remote / Central Monitoring
 
 <center> <img src="/remote.png" width='50%' height='50%' alt="Remote Monitoring"/></center>
 <br/>
