--- a/src/pages/services/security/ess/sensors.mdx
+++ b/src/pages/services/security/ess/sensors.mdx
@@ -1,7 +1,11 @@
 ---
 title: Motion Senors
 description: Understand what a motion senor is and how it improves your security and reduce expenses of your facility
+layout: 'src/layouts/MarkdownLayout.astro'
+
 ---
+import { Image } from 'astro:assets';
+
 Motion sensors are clever little devices that can detect movement around them. They work by recognizing when objects in their vicinity - like people, animals or even inanimate objects - change position.
 
 Motion sensors are commonly used for security purposes. They can trigger an alarm or notification when motion is detected, alerting the owner that someone may have entered the property unlawfully.
