--- a/src/pages/services/security/ess/video_analytics.mdx
+++ b/src/pages/services/security/ess/video_analytics.mdx
@@ -1,28 +1,16 @@
 ---
 title: Video Analytics 
 description: Understand Knighthood Offerings of Video Analytics Solutions offered along with Physical Security for our Customers
+layout: 'src/layouts/MarkdownLayout.astro'
 
 ---
 
-
-
-<Cards num={2}>
-<div className="mx-auto lg:grid lg:grid-cols-4 md:grid md:grid-cols-4  sm:grid sm:grid-cols-2  ">
-  <Card image className="mx-5" href="/services/security/ess/video_analytics" title="" >
-    <>![Fire Detection](/fireai.jpg)</>
-  </Card>
-  <Card image className="mx-5" href="/services/security/ess/video_analytics" title="" >
-    <>![Theft Detection](/theft.jpg)</>
-  </Card>
-   <Card image className="mx-5" href="/services/security/ess/video_analytics" title="" >
-    <>![Perimeter Monitoring](/peri.jpg)</>
-  </Card>
-  <Card image className="mx-5" href="/services/security/ess/video_analytics" title="" >
-    <>![BlackListed Person](/black.jpg)</>
-  </Card>
-  </div>
-</Cards>
-
+<div class="grid grid-cols-4 gap-3">
+<img src="/fireai.jpg" alt="Fire Detection"/>
+<img src="/theft.jpg" alt="Theft Detection"/>
+<img src="/peri.jpg" alt="Perimeter Monitoring"/>
+<img src="/black.jpg" alt="BlackListed Person"/>
+</div>
 
 
 
