--- a/src/pages/services/security/ess/video_analytics/housing.mdx
+++ b/src/pages/services/security/ess/video_analytics/housing.mdx
@@ -1,6 +1,8 @@
 ---
 title: Housing - Video Analytics
 description: Understand how we integrate Physical Security with Video Analytics for Housing Customers
+layout: 'src/layouts/MarkdownLayout.astro'
+
 ---
 
 
