--- a/src/pages/services/security/ess/video_analytics/manufacturing.mdx
+++ b/src/pages/services/security/ess/video_analytics/manufacturing.mdx
@@ -1,6 +1,8 @@
 ---
 title: Manufacturing - Video Analytics
 description: Understand how we integrate Physical Security with Video Analytics for our Manufacturing Customers
+layout: 'src/layouts/MarkdownLayout.astro'
+
 ---
 
 
