--- a/src/pages/services/security/ess/video_analytics/retail.mdx
+++ b/src/pages/services/security/ess/video_analytics/retail.mdx
@@ -1,6 +1,8 @@
 ---
 title: Retail - Video Analytics
 description: Understand how we integrate Physical Security with Video Analytics for Retail Customers
+layout: 'src/layouts/MarkdownLayout.astro'
+
 ---
 
 ## Current Scenario
