--- a/src/pages/services/security/ess/video_analytics/warehouse.mdx
+++ b/src/pages/services/security/ess/video_analytics/warehouse.mdx
@@ -1,6 +1,8 @@
 ---
 title: Warehouse - Video Analytics
 description: Understand how we integrate Physical Security with Video Analytics for our Warehouse Customers
+layout: 'src/layouts/MarkdownLayout.astro'
+
 ---
 
 
