--- a/src/pages/services/security/iss/corp-inv.mdx
+++ b/src/pages/services/security/iss/corp-inv.mdx
@@ -1,4 +1,6 @@
 ---
+layout: 'src/layouts/MarkdownLayout.astro'
+
 title: Corporate Investigations
 description: Investigative services for Organisations across India
 ---
