--- a/src/pages/services/security/iss/e-commerce.mdx
+++ b/src/pages/services/security/iss/e-commerce.mdx
@@ -1,5 +1,7 @@
 ---
 title: ECommerce Security Solutions
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Security Solution for ecommerce organisation for complete security 24X7 across India
 ---
 
