--- a/src/pages/services/security/iss/event.mdx
+++ b/src/pages/services/security/iss/event.mdx
@@ -1,5 +1,7 @@
 ---
 title: Event Management Security
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Training Offered by Knighthood to Ensure security of customer premises
 
 ---
