--- a/src/pages/services/security/iss/patrol.mdx
+++ b/src/pages/services/security/iss/patrol.mdx
@@ -1,5 +1,7 @@
 ---
 title: Patrolling
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Understand how Knightood does Patrolling for Customers
 
 ---
