--- a/src/pages/services/security/iss/static-guarding.mdx
+++ b/src/pages/services/security/iss/static-guarding.mdx
@@ -1,11 +1,13 @@
 ---
+layout: 'src/layouts/MarkdownLayout.astro'
+
 title: Static Manned Guarding
 description: Hire Security Guard across India for complete security 24X7
 ---
 
 
 
-# Hire Security Guard
+
 We provide experienced and well-trained personnel to ensure the safety of any premises across India.
 
 <center> <img className=" pl-5" src="/1s.jpg" width='60%' height='flex' alt="Security Services"/></center>
