--- a/src/pages/services/security/iss/training.mdx
+++ b/src/pages/services/security/iss/training.mdx
@@ -1,5 +1,7 @@
 ---
 title: Training Services
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Training Offered by Knighthood to Ensure security of customer premises
 ---
 
