--- a/src/pages/services/security/iss/warehouse.mdx
+++ b/src/pages/services/security/iss/warehouse.mdx
@@ -1,5 +1,7 @@
 ---
 title: Warehouse Security Solutions
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Discover Knighthood's warehouse security solutions and answers to common queries. Protect your business with our advanced security measures
 
 ---
