--- a/src/pages/services/security/iss/emergency.mdx
+++ b/src/pages/services/security/iss/emergency.mdx
@@ -1,5 +1,7 @@
 ---
 title: Emergency Support
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Emergency Response Knighthood's Trained Personnel to Provide Support
 
 ---
