--- a/src/pages/services/security/iss/fire.mdx
+++ b/src/pages/services/security/iss/fire.mdx
@@ -1,5 +1,7 @@
 ---
 title: Fire & Safety Support
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Fire & Safety Services Offered by Knighthood
 
 ---
