--- a/src/pages/services/security/iss/pso.mdx
+++ b/src/pages/services/security/iss/pso.mdx
@@ -1,5 +1,7 @@
 ---
 title: Personal Security Officer (PSO)
+layout: 'src/layouts/MarkdownLayout.astro'
+
 description: Our Integrated Security Solutions for Organisations to ensure complete security 24X7
 
 ---
