--- a/src/pages/whyus/index.mdx
+++ b/src/pages/whyus/index.mdx
@@ -3,44 +3,10 @@ layout: 'src/layouts/MarkdownLayout.astro'
 title: Why work with Knighthood
 description: Join the 80% of our customers who have been with us for more than 5 years and experience our team's decades of experience in the industry. 
 ---
-import Stats from '~/components/widgets/Stats.astro';
+import Stats from '../../components/common/Stats.astro'
 
 
-<center className="pt-5"><div className="stats stats-vertical lg:stats-horizontal shadow mx-auto">
-
- <div className="stat">
-    <div className="stat-title">5 Year Retention</div>
-    <div className="stat-value">80%+</div>
-    <div className="stat-desc">Customers been with us for over 5 years</div>
-  </div>
-  
-  <div className="stat">
-    <div className="stat-title">Yearly Renewal</div>
-    <div className="stat-value">90+</div>
-    <div className="stat-desc">Customers who continue with our services</div>
-  </div>
-  
-  <div className="stat">
-    <div className="stat-title">SLA</div>
-    <div className="stat-value">99.3%</div>
-    <div className="stat-desc">Across all solution</div>
-  </div>
-
-  <div className="stat">
-    <div className="stat-title">PSARA License</div>
-    <div className="stat-value">17</div>
-    <div className="stat-desc">Indian States</div>
-  </div>
-
-  <div className="stat">
-    <div className="stat-title">Associates</div>
-    <div className="stat-value">30k+</div>
-    <div className="stat-desc">Who have worked with us</div>
-  </div>
-    
-</div></center>
-
-
+<Stats/>
 
 
 
