--- a/src/content/marketing/hire-security-guards.mdx
+++ b/src/content/marketing/hire-security-guards.mdx
@@ -1,7 +1,11 @@
 ---
 title: Your Complete Guide to Hiring Security Guards in India
 excerpt: Guide to hiring security guards in Delhi NCR, Mumbai, Hyderabad, Bangalore
+image: https://i.imgur.com/oblrVi9.png
+
 ---
+import { Image } from 'astro:assets';
+
 
 Security is a critical aspect of any business. The safety of your employees, customers, and assets needs to be given high priority. As a business owner or manager, you need to ensure that necessary measures are taken to ensure that your premises are safe and secure. 
 Engaging a reliable security agency that provides you with the right security solutions tailored to your business needs is a key step in this regard.
@@ -20,15 +24,15 @@ We discuss about the benfits of hiring security guards across different domains 
 Before you start your search for a security agency, it's important to assess your security needs. This will help you determine the level of security required and the specific services you need. Consider the following factors:
 <Image src="/sdf.jpg" className="mx-auto" width="600" height="400" alt="Security Agency"/>
 
-* Identify your [security goals and objectives](/security/requirements/governance)
+* Identify your [security goals and objectives](https://docs.knighthood.co/security/requirements/governance)
     
-* Determine the [level of security required](/security/planning/strategy)
+* Determine the [level of security required](https://docs.knighthood.co/security/planning/strategy)
 
 * Determing the [type of Security Guards](/blog/security-guard-types) you require
     
 * Evaluate the size and complexity of your business
     
-* Consider the [potential risks and threats](/security/planning/risk)
+* Consider the [potential risks and threats](https://docs.knighthood.co/security/planning/risk)
 
 In the past few years with the advent of new techology solutions and AI, multiple innovative security solutions exist for Organisations such as:
 * [Mobile Patrolling](/blog/security-agency-tips-patrol)
@@ -48,7 +52,7 @@ Our Blog post explains on advantages of [engaging services of a professional sec
 ## Research Potential Security Agencies
 Once you have a clear understanding of your security needs, it's time to start researching potential security agencies. Here are some tips to help you in your search:
 
-<img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=3474&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+<Image src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=3474&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 " className="mx-auto" width="600" height="400" alt="Security Agency Research"/>
 
 * Ask for recommendations
@@ -64,12 +68,12 @@ Once you have a clear understanding of your security needs, it's time to start r
 It's crucial to ensure that the security agency you choose is licensed and certified to operate in your area. Verify the following:
 
 
-<img src="https://images.unsplash.com/photo-1423592707957-3b212afa6733?q=80&w=2560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" alt="Security License"/>
+<Image src="https://images.unsplash.com/photo-1423592707957-3b212afa6733?q=80&w=2560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" alt="Security License"/>
 
 
 * Verify the [PSARA license](https://psara.gov.in/) of the agency for the location you want to hire
     
-* Check if they have detailed documentation on their [standards and regulations](/docs/security/intro))
+* Check if they have detailed documentation on their [standards and regulations](http://knighthood.co/security/intro))
     
 * Look for agencies that provide ongoing training and development for their staff
     
@@ -79,7 +83,7 @@ It's crucial to ensure that the security agency you choose is licensed and certi
 
 The reputation of the security agency is an important factor to consider. Look for agencies with a proven track record and positive reviews from their clients. Check their:
 
-<img src="/rep.webp" className="mx-auto" width="600" height="400" alt="Agency's Reputation"/>
+<Image src="/rep.webp" className="mx-auto" width="600" height="400" alt="Agency's Reputation"/>
 
 
 * Check their reputation in the industry
@@ -97,7 +101,7 @@ The reputation of the security agency is an important factor to consider. Look f
 
 
 When evaluating potential security agencies, it's important to assess the quality of their services. Look for agencies that offer:
-<img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+<Image src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 " className="mx-auto" width="600" height="400" alt="Quality of Services"/>
 
 
@@ -115,13 +119,13 @@ When evaluating potential security agencies, it's important to assess the qualit
 ## Look for a Proactive and Innovative Agency
 
 In today's rapidly changing security landscape, it's important to choose an agency that is proactive and innovative. Look for agencies that:
-<img src="https://images.unsplash.com/photo-1607074245271-a2bb122f6e57?q=80&w=3474&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+<Image src="https://images.unsplash.com/photo-1607074245271-a2bb122f6e57?q=80&w=3474&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 
 " className="mx-auto" width="600" height="400" alt="Proactive and Innovative Agency"/>
 
 * Assess their ability to adapt to changing security needs
     
-* Check their approach to [security risk management](/security/governance/alerts)
+* Check their approach to [security risk management](https://docs.knighthood.co/security/governance/alerts)
     
 * Look for agencies that use advanced technology solutions
     
@@ -134,14 +138,14 @@ In today's rapidly changing security landscape, it's important to choose an agen
 
 Effective communication and customer service are essential for a successful partnership with a security agency. Evaluate their:
 
-<img src="https://images.unsplash.com/photo-1613963931023-5dc59437c8a6?q=80&w=3569&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" 
+<Image src="https://images.unsplash.com/photo-1613963931023-5dc59437c8a6?q=80&w=3569&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" 
 alt="Customer Service"/>
 
 * Evaluate their responsiveness and availability
     
-* Look for agencies with [clear communication channels](/security/requirements/information)
+* Look for agencies with [clear communication channels](https://docs.knighthood.co/security/requirements/information)
     
-* Verify their [reporting and monitoring capabilities](/security/governance/incident)
+* Verify their [reporting and monitoring capabilities](https://docs.knighthood.co/security/governance/incident)
     
 * Consider their level of customer service and support
 
@@ -151,7 +155,7 @@ alt="Customer Service"/>
 Finally, it's important to carefully review the contract terms and pricing structure of the security agency. Negotiate the terms to ensure that they meet your business needs, and consider factors such as:
 
 
-<img src="https://images.unsplash.com/photo-1565371767810-ef913a6c8315?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" 
+<Image src="https://images.unsplash.com/photo-1565371767810-ef913a6c8315?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" 
 alt="Contract Pricing"/>
 
 * Review the contract terms and conditions
@@ -169,8 +173,9 @@ You can refer to our blog post where we have provided a [simple checkist prior t
   <summary className="collapse-title text-xl font-medium"><h2>Common Mistakes</h2> </summary>
   <div className="collapse-content"> 
 
-<Steps>
-When hiring security guards in India, there are several common mistakes to avoid to ensure that you get the right services for your needs.
+
+  <li class="step">When hiring security guards in India, there are several common mistakes to avoid to ensure that you get the right services for your needs.</li>
+
 <Image src="https://images.unsplash.com/photo-1565184944956-70a161db60f4?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" className="mx-auto" width="600" height="400" 
 alt="Common Mistakes"/>
 
@@ -187,24 +192,24 @@ alt="Common Mistakes"/>
  Each business has unique security needs. Ensure that the security company you hire is willing to adapt their services to meet your specific requirements
 
 ### Not Focusing on Prevention
- [Prevention is critical to effective security](//security/governance/develop). Ensure that the security company you hire is proactive in their approach and [provides strategies](//security/measures/planning) for preventing crime, rather than just reacting to incidents
+ [Prevention is critical to effective security](https://docs.knighthood.co/security/governance/develop). Ensure that the security company you hire is proactive in their approach and [provides strategies](https://docs.knighthood.co/security/measures/planning) for preventing crime, rather than just reacting to incidents
 
 ### Not Checking Reputation and Licensing
- Research the security company's reputation by reading reviews and checking their ratings on platforms. Also, ensure that they have the [necessary licenses and insurance coverage](//security/personnel/guard) for their services
+ Research the security company's reputation by reading reviews and checking their ratings on platforms. Also, ensure that they have the [necessary licenses and insurance coverage](https://docs.knighthood.co/security/personnel/guard) for their services
 
 ### Not Negotiating Contract Terms and Pricing
- Carefully review the [contract terms and pricing structure](/blog/our-pricing) of the security company. Negotiate the terms to ensure they meet your business needs, and consider factors such as [labour compliance](//docs/intro)
+ Carefully review the [contract terms and pricing structure](/blog/our-pricing) of the security company. Negotiate the terms to ensure they meet your business needs, and consider factors such as [labour compliance](https://docs.knighthood.co/docs/intro)
 
 ### Not Ensuring Uniform Options
-Ensure that the [security guards you hire](//security/personnel/types) are uniformed in a way that aligns with your business's image and needs. This can include police-style uniforms, suits, or plain clothes, depending on the security duties
+Ensure that the [security guards you hire](https://docs.knighthood.co/security/personnel/types) are uniformed in a way that aligns with your business's image and needs. This can include police-style uniforms, suits, or plain clothes, depending on the security duties
 
 ### Not Hiring from a Reputable Agency
-Hiring from a reputable agency can provide peace of mind and ensure that the guards are [professionally trained and equipped](//security/governance/awareness) to perform their duties
+Hiring from a reputable agency can provide peace of mind and ensure that the guards are [professionally trained and equipped](https://docs.knighthood.co/security/governance/awareness) to perform their duties
 
 ### Not Asking Questions
  Don't hesitate to ask questions about the services offered, the training provided, and the experience of the security guards. This will help you make an informed decision about the security company you choose
 
-</Steps>
+
 
   </div>
 </details>
@@ -213,7 +218,6 @@ Hiring from a reputable agency can provide peace of mind and ensure that the gua
   <summary className="collapse-title text-xl font-medium"><h2>Key Skills and Traits of a Security Guard</h2> </summary>
   <div className="collapse-content"> 
 
-<Steps>
 
 <Image src="/guard.png" className="mx-auto" width="200" height="200" 
 alt="Security Guard"/>
@@ -252,7 +256,7 @@ Maintaining good health, free from physical disabilities or medical conditions, 
 Security guards are entrusted with maintaining safety and security, so having a clean criminal record and demonstrating good moral character is crucial for this role.
 
 You can refer to out [Blog Post](/blog/security-guard) for a more in-depth understanding on this topic
-</Steps>
+
 
   </div>
 </details>
@@ -271,10 +275,6 @@ You can refer to our blog post to [understand about various cost components that
 If you are looking to hire a security guard for an event, you should know that the cost of hiring a security guard in metropolitan cities can be quite high. 
 For instance, in Delhi, the cost of hiring a security guard for an event can be anywhere from Rs. 18,000 to Rs. 33,000, depending on the purpose and duration of the event. 
 Similarly, in Bangalore, the cost can range from Rs. 17,000 to Rs. 30,000. Additionally, the cost of hiring a security guard in Mumbai may be even higher, ranging from Rs. 20,000 to Rs. 40,000. You can refer to our blog post to [understand the cost of hiring a security guard](/blog/security-guard-cost)
-<Steps>
-
-
-</Steps>
 
   </div>
 </details>
@@ -284,9 +284,9 @@ Similarly, in Bangalore, the cost can range from Rs. 17,000 to Rs. 30,000. Addit
   <summary className="collapse-title text-xl font-medium"><h2>Security Services FAQ's</h2> </summary>
   <div className="collapse-content"> 
 
-<Steps>
 
-<img src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?q=80&w=2873&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+
+<Image src="https://images.unsplash.com/photo-1599508704512-2f19efd1e35f?q=80&w=2873&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 " className="mx-auto" width="200" height="200" 
 alt="FAQ to Hire Security Agency"/>
 
@@ -329,8 +329,8 @@ Integrated services offer a range of advantages:
 
 You can refer to our [blog post](/blog/security-Service) to understand more
 
-</Steps>
-**You can refer to our [FAQ's](/services/security/FAQ-Guard) to understand more abour Hiring Security Guards across India **
+
+**You can refer to our [FAQ's](/services/security/FAQ-Guard) to understand more abour Hiring Security Guards across India**
 
   </div>
 </details>
