--- a/src/pages/case/case1.mdx
+++ b/src/pages/case/case1.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /log.svg
 title: MNC Compliance Streamlining 
 description: Learn how Knighthood helped a  logistics organization in India streamlined their compliance process and increased productivity.
  
