--- a/src/pages/case/case2.mdx
+++ b/src/pages/case/case2.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /gov.svg
 title: Large Scale Government Staff Deployment
 description: Learn how Knighthood successfully deployed 500+ staff across 90 locations in just 20 days
 
