--- a/src/pages/case/case3.mdx
+++ b/src/pages/case/case3.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /tel.svg
 title: Telecom Security Solutions
 description: Learn how Knighthood assisted a telecom infrastructure provider reduced pilferage
 
