--- a/src/pages/case/case4.mdx
+++ b/src/pages/case/case4.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /shop.svg
 title: Retail Security Solutions
 description: Learn how Knighthood helped a  multinational retailer reduced pilferage, cost and ensured 100% compliance.
 
