--- a/src/pages/case/index.mdx
+++ b/src/pages/case/index.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /src/assets/favicons/logo.png
 title: Customer Success Stories
 description: Our Success Stories from our work with customers across diverse industries
 ---
