--- a/src/pages/services/security/FAQ-Guard.mdx
+++ b/src/pages/services/security/FAQ-Guard.mdx
@@ -1,13 +1,16 @@
 ---
 title: FAQ - Security Guards
 description: FAQ for hiring security guards in India
-layout: 'src/layouts/MarkdownLayout.astro'
+layout: 'src/layouts/PageLayout.astro'
 
 ---
+import FaqJsonLd from '~/components/FaqJsonLd.astro';
+
+<FaqJsonLd />
 
 
-# Frequently Answered Questions
 Responses to the most common queries related to hiring of Security Guards In India 
+
 ## Questions 
 
 
