--- a/src/pages/case/case5.mdx
+++ b/src/pages/case/case5.mdx
@@ -1,6 +1,7 @@
 ---
 layout: 'src/layouts/MarkdownLayout.astro'
-
+date: 2024-09-10
+image: /gro.svg
 title: Startup Fulfillment Services
 description: Learn how Knighthood helped a startup in Instant Grocery scale up its operations across India during the pandemic
 ---
